# research-agent

./: .gitignore  README.md  about.md  main.py  pyproject.toml  requirements.txt
milvus_backend.db/7915c800-ba1f-4da4-aa21-a43058b9d0e5/: index_metadata.pickle
src/generation/: rag.py
src/memory/: memory_layer.py
src/podcast/: script_generator.py  text_to_speech.py
src/vector_database/: milvus_vector_db.py
src/web_scraping/: web_scraper.py
