[project]
name = "notebook-lm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.54.1",
    "crewai>=1.6.1",
    "fastembed>=0.7.4",
    "firecrawl>=4.18.1",
    "kokoro>=0.9.4",
    "pymilvus>=2.6.9",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "soundfile>=0.13.1",
    "yt-dlp>=2026.3.3",
    "zep-cloud>=3.18.0",
    "zep-crewai>=1.1.1",
]
